# Hackathon_Quantum_Computing_Qiskit

./: README.md
dashboards/: streamlit_app.py
quantum-ai-detector/: .gitignore  README.md  pyproject.toml  requirements.txt
quantum-ai-detector/dashboards/: streamlit_app.py
quantum-ai-detector/src/: dataset_loader.py  quantum_model.py
quantum-ai-detector/src/notebooks/: classical_model.py  dataset_loader.py  quantum_model.py
src/notebooks/: quantum_model.py
