[project]
name = "quantum-ai-detector"
version = "0.1.0"
description = "Comparison between classical and quantum AI for soil nutrient (NPK) analysis."
authors = [
    {name = "marymorona@gmail.com"}
]
license = {text = "MIT"}
package-mode = false
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pennylane (>=0.43.1,<0.44.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "kagglehub (>=0.3.13,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
